Implement base lobby functionality

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,8 +6,8 @@ $text: #fff8c0;
 $white: #fdf7ed;
 
 
-$baseDarkerOpacity: rgba(77, 63, 60,0.5);
-$baseDarkOpacity: rgba(53, 47, 46,0.5);
+$baseDarkerOpacity: rgba(77, 63, 60, 0.5);
+$baseDarkOpacity: rgba(53, 47, 46, 0.5);
 
 
 $accent: #da4e38;
@@ -15,7 +15,6 @@ $darkerAccent: #d44e52;
 
 $danger: #bd294e;
 $yellow: #facb3e;
-
 
 
 $modalOverlay: rgba(0, 0, 0, 0.5);
