--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,9 @@ $baseBackground: #222222;
 $baseDarker: #4D3F3C;
 $baseDark: #352F2E;
 $text: #fff8c0;
+$textOpacity: rgba(255, 248, 192,0.75);
+
+
 
 $white: #fdf7ed;
 $black: #0e0c0c;
