--- a/src/features/LobbyScreen/components/LobbyPlayers/LobbyPlayers.module.scss
+++ b/src/features/LobbyScreen/components/LobbyPlayers/LobbyPlayers.module.scss
@@ -1,11 +1,12 @@
 .wrap {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  //height: 100%;
+  //display: flex;
+  //flex-direction: column;
 }
 
 .players{
-  flex: 1;
+  //flex: 1;
+  height: 100%;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: 1fr;
