--- a/src/features/RoomScreen/components/CreateRoomModal/CreateRoomModal.module.scss
+++ b/src/features/RoomScreen/components/CreateRoomModal/CreateRoomModal.module.scss
@@ -22,9 +22,7 @@
   align-items: center;
 
   input {
-    border: solid 1px transparent;
-    background: $baseDarker;
-    padding: .25rem;
+    @extend .baseInput;
   }
 
   > label {
