--- a/src/features/LobbyScreen/components/LobbyStart/LobbyStart.module.scss
+++ b/src/features/LobbyScreen/components/LobbyStart/LobbyStart.module.scss
@@ -1,9 +1,21 @@
 @import "../../../../styles/variables";
+@import "../../../../styles/fonts";
 
 
-.wrap{
+.wrap {
+  @extend .headerFont;
+  font-size: $mediumSize;
   border-radius: $borderRadius;
   background: $accent;
   display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   height: 100%;
+
+  &:hover {
+    background: $yellow;
+    box-shadow: 0 0 1rem $yellow;
+    color: $black;
+  }
 }
